name:                blaze
version:             0.1.0.0
synopsis:            Blaze-html-based HTML5 library
description:         A host of HTML5 functions to make writing HTML5 with blaze-html practical.
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov, Chris Done
maintainer:          konstantin@anche.no
copyright:           2013 Chris Done, 2014 Konstantin Zudov
category:            HTML, Web
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Blaze,
                     Blaze.Html5,
                     Blaze.Elements,
                     Blaze.Attributes

  hs-source-dirs:    src/
  build-depends:     base > 4 && <5,
                     blaze-markup,
                     blaze-html
  ghc-options:       -Wall
